# RPPCA

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: RPPCA_paper.md
scripts/: example_simulation.py
src/rppca/: __init__.py  core.py  evaluation.py  model.py  utils.py
test/: test_rppca.py
